--- a/projects/architecture/ae.html
+++ b/projects/architecture/ae.html
@@ -19,7 +19,7 @@ blurb: This was the start of it all.
 </div>
 -->
 
-<img src="/img/ae/ae_grid.png" class="border1 gray_bg">
+<img src="{{site.baseurl}}/img/ae/ae_grid.png" class="border1 gray_bg">
 
 <!-- T E X T -->
 
@@ -37,7 +37,7 @@ blurb: This was the start of it all.
 
 <div class="border1 gray_bg">
 	<div class="hide">
-		<img src="/img/ae/ae_workshop_B.png" class="fullbleed">
+		<img src="{{site.baseurl}}/img/ae/ae_workshop_B.png" class="fullbleed">
 		<span class="captionbox projectcaption">
 		The Workshop
 		</span>
@@ -45,13 +45,13 @@ blurb: This was the start of it all.
 
 	<div class="grid grid_2h">
 		<div class="hide">
-			<img src="/img/ae/ae_stair.png" class="gray_bg2">
+			<img src="{{site.baseurl}}/img/ae/ae_stair.png" class="gray_bg2">
 			<span class="captionbox projectcaption">
 			The Stair
 			</span>
 		</div>
 		<div class="hide">
-			<img src="/img/ae/ae_bouquet.png" class="gray_bg2">
+			<img src="{{site.baseurl}}/img/ae/ae_bouquet.png" class="gray_bg2">
 			<span class="captionbox projectcaption">
 			The Quarters
 			</span>
@@ -60,17 +60,17 @@ blurb: This was the start of it all.
 
 	<div class="grid grid_3h">
 		<div class="hide">
-			<img src="/img/ae/ae_library_view1.png">	
+			<img src="{{site.baseurl}}/img/ae/ae_library_view1.png">	
 			<span class="captionbox projectcaption">
 			Inside the Library
 			</span>
 		</div>
-		<div><img src="/img/ae/ae_library_view2.png"></div>
-		<div><img src="/img/ae/ae_library_view3.png"></div>
+		<div><img src="{{site.baseurl}}/img/ae/ae_library_view2.png"></div>
+		<div><img src="{{site.baseurl}}/img/ae/ae_library_view3.png"></div>
 	</div>
 
 	<div class="hide">
-		<img src="/img/ae/ae_library.png" class="fullbleed gray_bg2">
+		<img src="{{site.baseurl}}/img/ae/ae_library.png" class="fullbleed gray_bg2">
 		<span class="captionbox projectcaption">
 		The Library
 		</span>
@@ -89,7 +89,7 @@ blurb: This was the start of it all.
 
 <div class="border1 gray_bg">
 	<div class="hide">
-		<img src="/img/ae/ae_site.png">
+		<img src="{{site.baseurl}}/img/ae/ae_site.png">
 		<span class="captionbox projectcaption_k">
 		Site plan
 		</span>
