--- a/projects/architecture/blackflag.html
+++ b/projects/architecture/blackflag.html
@@ -8,4 +8,4 @@ year: 2007
 blurb: The Tristan Chord and the modern mind.
 ---
 
-<img src="/img/blackflag/blackflag1b.png" class="border3">
+<img src="{{site.baseurl}}/img/blackflag/blackflag1b.png" class="border3">
