--- a/projects/architecture/placeholder.html
+++ b/projects/architecture/placeholder.html
@@ -9,7 +9,7 @@ year: 2017
 
 <div class="border1 gray_bg">
 	<div class="hide">
-		<img src="/img/sunshade/sunshade1.png" class="fullbleed">
+		<img src="{{site.baseurl}}/img/sunshade/sunshade1.png" class="fullbleed">
 		<span class="captionbox projectcaption">
 		Axonometric
 		</span>
@@ -33,7 +33,7 @@ year: 2017
 
 <div class="border1 gray_bg">
 	<div class="hide">
-		<img src="/img/sunshade/sunshade2.png" class="fullbleed">
+		<img src="{{site.baseurl}}/img/sunshade/sunshade2.png" class="fullbleed">
 		<span class="captionbox projectcaption">
 		Site view
 		</span>
@@ -42,7 +42,7 @@ year: 2017
 
 <div class="border1 gray_bg notop">
 	<div class="hide">
-		<img src="/img/sunshade/sunshade3.png" class="fullbleed">
+		<img src="{{site.baseurl}}/img/sunshade/sunshade3.png" class="fullbleed">
 		<span class="captionbox projectcaption">
 		Interior view
 		</span>
@@ -51,7 +51,7 @@ year: 2017
 
 <div class="border1 gray_bg notop">
 	<div class="hide border1 red_bg">
-		<img src="/img/sunshade/sunshade4.png" class="fullbleed">
+		<img src="{{site.baseurl}}/img/sunshade/sunshade4.png" class="fullbleed">
 		<span class="captionbox projectcaption">
 		Dusk in an abandoned lot
 		</span>
