--- a/projects/index.html
+++ b/projects/index.html
@@ -34,41 +34,41 @@ layout: default
 <div id="rocks">
 <!-- ROW 1 -->
     <a class="goo" href="#">
-	    <div class="start"><img src="/img/item1.svg"></div>
-	    <div class="end"><img src="/img/item1hover2.svg"></div>
+	    <div class="start"><img src="{{site.baseurl}}/img/item1.svg"></div>
+	    <div class="end"><img src="{{site.baseurl}}/img/item1hover2.svg"></div>
     </a>
     <a class="goo" href="#">
-	    <div class="start"><img src="/img/item3.png"></div>
-	    <div class="end"><img src="/img/item3hover.svg"></div>
+	    <div class="start"><img src="{{site.baseurl}}/img/item3.png"></div>
+	    <div class="end"><img src="{{site.baseurl}}/img/item3hover.svg"></div>
     </a> 
     <a class="goo" href="#">
-	    <div class="start"><img src="/img/item4.png"></div>
-	    <div class="end"><img src="/img/item4hover.svg"></div>
+	    <div class="start"><img src="{{site.baseurl}}/img/item4.png"></div>
+	    <div class="end"><img src="{{site.baseurl}}/img/item4hover.svg"></div>
     </a>
 <!-- ROW 2 -->
     <a class="goo" href="#">
-	    <div class="start"><img src="/img/item5.png"></div>
-	    <div class="end"><img src="/img/item5hover.svg"></div>
+	    <div class="start"><img src="{{site.baseurl}}/img/item5.png"></div>
+	    <div class="end"><img src="{{site.baseurl}}/img/item5hover.svg"></div>
     </a> 
     <a class="goo" href="#">
-	    <div class="start"><img src="/img/item6.png"></div>
-	    <div class="end"><img src="/img/item6hover.svg"></div>
+	    <div class="start"><img src="{{site.baseurl}}/img/item6.png"></div>
+	    <div class="end"><img src="{{site.baseurl}}/img/item6hover.svg"></div>
     </a> 
     <a class="goo" href="#">
-	    <div class="start"><img src="/img/item3.png"></div>
-	    <div class="end"><img src="/img/item3hover.svg"></div>
+	    <div class="start"><img src="{{site.baseurl}}/img/item3.png"></div>
+	    <div class="end"><img src="{{site.baseurl}}/img/item3hover.svg"></div>
     </a>
 <!-- ROW 3 -->
    <a class="goo" href="#">
-	    <div class="start"><img src="/img/item1.svg"></div>
-	    <div class="end"><img src="/img/item1hover2.svg"></div>
+	    <div class="start"><img src="{{site.baseurl}}/img/item1.svg"></div>
+	    <div class="end"><img src="{{site.baseurl}}/img/item1hover2.svg"></div>
     </a>
     <a class="goo" href="#">
-	    <div class="start"><img src="/img/item4.png"></div>
-	    <div class="end"><img src="/img/item4hover.svg"></div>
+	    <div class="start"><img src="{{site.baseurl}}/img/item4.png"></div>
+	    <div class="end"><img src="{{site.baseurl}}/img/item4hover.svg"></div>
     </a>
     <a class="goo" href="#">
-	    <div class="start"><img src="/img/item6.png"></div>
-	    <div class="end"><img src="/img/item6hover.svg"></div>
+	    <div class="start"><img src="{{site.baseurl}}/img/item6.png"></div>
+	    <div class="end"><img src="{{site.baseurl}}/img/item6hover.svg"></div>
     </a>
 </div>
