--- a/projects/visual/monotypes.html
+++ b/projects/visual/monotypes.html
@@ -7,7 +7,7 @@ place: New Orleans
 year: 2014
 ---
 
-<img src="/img/may12-3.jpg" class="border1 gray_bg">
+<img src="{{site.baseurl}}/img/may12-3.jpg" class="border1 gray_bg">
 <div class="full">
 	<div class="projectheadline">This is where the answer goes.</div>
 	<br>
@@ -15,9 +15,9 @@ year: 2014
 	This is where the answer goes.  a human centered design approach to community challenges in the area of public health and other complex dadee-da success scenario implementicks. This is where the answer goes.  a human centered design approach to community challenges in the area of public health and other complex dadee-da success scenario implementicks.
 	</div>
 </div>
-<img src="/img/may12-4.jpg" class="border2 black_bg">
-<img src="/img/may12-5.jpg" class="border2 black_bg">
-<img src="/img/may12-6.jpg" class="border2 black_bg">
+<img src="{{site.baseurl}}/img/may12-4.jpg" class="border2 black_bg">
+<img src="{{site.baseurl}}/img/may12-5.jpg" class="border2 black_bg">
+<img src="{{site.baseurl}}/img/may12-6.jpg" class="border2 black_bg">
 <!--
 <div class="full black_bg projecttext">
 	All Hubble could see was a slowly<br> 
@@ -31,6 +31,6 @@ year: 2014
 	can see it at all.<br>
 </div>
 -->
-<img src="/img/may12-7.jpg" class="border2 black_bg">
-<img src="/img/may12-1.jpg" class="border2 black_bg">
-<img src="/img/may12-2.jpg" class="border2 black_bg">
+<img src="{{site.baseurl}}/img/may12-7.jpg" class="border2 black_bg">
+<img src="{{site.baseurl}}/img/may12-1.jpg" class="border2 black_bg">
+<img src="{{site.baseurl}}/img/may12-2.jpg" class="border2 black_bg">
