--- a/projects/architecture/wetlands.html
+++ b/projects/architecture/wetlands.html
@@ -7,4 +7,4 @@ place: Lake Erie Coastline
 year: 2017
 ---
 
-<img src="/img/wetlands/wetlands1.png">
+<img src="{{site.baseurl}}/img/wetlands/wetlands2.png">
