--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
-layout: home
+layout: default
 ---
 
 <div class="full notop">
+	<div class="wip">Site under development (&larr; literally; not a clever title)</div>
 	<span class="projectplace">Patrick Stowe Jones</span><br><br>
 	<h1 class="hometext">
 	i am an architect, designer, and writer focused on the human environment. 
