--- a/narrative.html
+++ b/narrative.html
@@ -2,7 +2,7 @@
 layout: stanford
 ---
 
-<h1 class="projectname left5 top5">Work</h1>
+<h1 class="projectname left5 top5">Worldview</h1>
 
 <!--
 <div class="left5">
@@ -19,11 +19,13 @@ layout: stanford
         <div class="narr-projectheadline blue1"><span class="strike">Messy Margins</span>&nbsp;&nbsp;The Human Environment</div><br><br>
         <div class="projecttext">
         As a designer with a background in architecture, my fascination lies at the coastline, the margin where the sea and its mythic vastness meets the world as we've built it. The seas are coming for us, and we will have to invent new ways to live. Coastlines are the site of that tension, but also that generative chaos. etc. etc. <br>
-            asdfadsfasd<br>
-            adsfwoerpoiw<br>
-            adsfqwoejfioqwjef<br>
-            a;ldskfj<br>
-            asdfijowef<br><br>
+            <a href="#water">Preamble: Water</a><br>
+            <!--<a href="#wetlands">2. Wetlands</a><br>
+            <a href="#delta">3. Delta</a><br>
+            <a href="#place">4. Place</a><br>
+            <a href="#paradise">5. Paradise</a><br>
+            <a href="#map">6. Map</a><br>-->
+            <br>
             ↓
         </div>
     </div>
@@ -32,12 +34,11 @@ layout: stanford
 
 <!-- Water Story -->
 
-<div class="border0 blue1_bg top5">
-        <div class="narr-counter blue1">1/6</div>
+<div class="border0 blue1_bg top5" id="water">
+        <div class="narr-counter blue1">Preamble</div>
         <h1 class="narr-projectname">Water</h1>
-    <span class="narr-projecttext blue1"><b>The coastline</b> has informed my worldview as a designer in ways that surprise even me.</span>
+        <span class="narr-projecttext blue1"><b>The coastline</b> has informed my worldview as a designer in ways that surprise even me.</span>
 </div>
-
 <div class="blue1_border">
 
     <div class="hide">
@@ -70,7 +71,7 @@ layout: stanford
             <span class="narr-projectheadline blue1 uline">New Orleans</span><br><br>
             <div class="projecttext blue1">In my mind, New Orleans is always facing south.
             <br>
-            In New Orleans, I experienced the tenuous balance the city holds with the sea.     
+            Here, the tenuous balance the city holds with the sea is unescapable. Because the city is shaped like a bowl, when it rains water pools in the lowest and most challenged parts of the city. To prevent flooding, the city pumps water out of the bowl back out to the Gulf via Lake Pontchartrain. But because that water doesn't soak back into the sediment on which New Orleans rests, the city is subsiding at a rate that is very obvious. Meanwhile, the control structures that prevent seasonal flooding also prevent sediment from building up during floods and creating new land—land that becomes part of the vast Mississippi delta and serves as a buffer from the sea. But because the existing delta has been sliced through with pipeline channels, the fabric of the marsh is eroding. Salt water seeps in further and destroys the plants that hold the land in place. And during hurricanes, storm surges are more destructive because there is less natural defense for the marsh. With sea level rise on top of that, the Louisiana delta is in a downward spiral, and New Orleans is at constant risk. Large-scale infrastructure to prevent flooding is the only defense; even so, before too long, New Orleans will be its own Venice: a mythical city on an island, surrounded by the sea.
             </div>
 		</div>
 		<div class="hide">
@@ -92,7 +93,7 @@ layout: stanford
         As a boy from the lakes, the wild coastline of Lake Superior is a romantic and privileged retreat, tempting me to escape the challenges of the modern world. I have a heroic architect's daydream about building with nature rather than against it, to embrace limitations rather than resist them. But this goes way beyond building technology or construction; it's about how space becomes culture, enabling life practices and relationships between each other and resources that cultivate thriving.
             <br>
             <br>
-            Growing up, I formed a profound appreciation for the natural world, and even now feel most at home anonymous in the land. This reflects my bias to consider the Great Lakes and, by extension, all of the natural world as a part of <b>culture based on separation.</b> We're lake people because we know to go to the water when we need separation.
+            Growing up, I formed a profound appreciation for the natural world, and even now feel most at home anonymous in the land. This reflects my bias to consider the Great Lakes and, by extension, the entire natural world as a part of culture based on <b>the idea of separation.</b> We're lake people because we know to go to the water when we need to get away, to feel at home.
 		</div>
         <div class="border0">
             &nbsp;<!--<img src="{{site.baseurl}}/img/water/lakesup.png" class="">-->
@@ -192,64 +193,88 @@ layout: stanford
                 And it will do so quietly and surreptitiously in ways we are still trying to understand. The coastline will always be a thriving margin in the human environment, and in upcoming decades and beyond, we will have to adapt in fundamentally new ways to living with water. As a naturalist, this is a future of despair. 
                 <br>
                 <br>
-                But as an architect, I'm excited. This is going to open up new kinds of architecture, building technology, material possibilities, and ways of living and sustaining communities. And it will require a way of learning and thinking that has either been lost since we first built walls to hold back the sea, or has never before existed in the human psyche. How do we learn? How do we think? How do we make for a future where home is on the water?
+                <b>But as an architect, I'm excited.</b> We must create new kinds of architecture, building technology, material possibilities, and ways of living and sustaining communities. And it will require a way of learning and thinking that has either been lost since we first built walls to hold back the sea, or has never before existed in the human psyche. How do we learn? How do we think? How do we make for a future where home is on the water?
             </div>
 	   </div> 
     </div>
 </div>
-    
+
+<!--
+<div class="border1"><center><span class="projecttext">↓</span></center></div>
+-->
 
 
 <!-- Michigan Wetlands -->
+<!--
 
-<div class="border0 green1_bg top5">
-        <div class="narr-counter green1">2/6</div>
+<div class="border0 green1_bg" id="wetlands">
+        <div class="narr-counter green1">1/5</div>
         <h1 class="projectname">Wetlands</h1>
+        <span class="narr-projecttext green1"><b>Michigan's Lake Erie Coast:</b> Mapping a resilient future for the Blue Belt</span>
 </div>
 <div class="green1_border">
 Michigan!
 </div>
 
+<div class="border1"><center><span class="projecttext">↓</span></center></div>
+-->
 
-<!-- Changing Course -->
 
-<div class="border0 yellow1_bg top5">
-            <div class="narr-counter yellow1">3/6</div>
+<!-- Changing Course & Ripple Effect -->
+<!--
+
+<div class="border0 yellow1_bg" id="delta">
+        <div class="narr-counter yellow1">2/5</div>
         <h1 class="projectname">Delta</h1>
+        <span class="narr-projecttext yellow1"><b>Changing Course:</b> The delta as protective infrastructure</span>
 </div>
 <div class="yellow1_border">
 Changing Course
 </div>
 
+<div class="border1"><center><span class="projecttext">↓</span></center></div>
+-->
+
 
 <!-- Proxy -->
+<!--
 
-<div class="border0 blue2_bg top5">
-            <div class="narr-counter blue2">4/6</div>
+<div class="border0 blue2_bg" id="place">
+        <div class="narr-counter blue2">3/5</div>
         <h1 class="projectname">Place</h1>
+        <span class="narr-projecttext blue2"><b>Proxy:</b> A digital platform enabling place-based experience</span>
 </div>
 <div class="blue2_border">
 Proxy
 </div>
 
+<div class="border1"><center><span class="projecttext">↓</span></center></div>
+-->
 
 <!-- Against Exile -->
+<!--
 
-<div class="border0 red1_bg top5">
-            <div class="narr-counter red1">5/6</div>
+<div class="border0 red1_bg" id="paradise">
+        <div class="narr-counter red1">4/5</div>
         <h1 class="projectname">Paradise</h1>
+        <span class="narr-projecttext green1"><b>Against Exile:</b> Modernity's refugees at home on the sea</span>
 </div>
 <div class="red1_border">
 Against Exile
 </div>
 
+<div class="border1"><center><span class="projecttext">↓</span></center></div>
+-->
 
 <!-- Plot -->
+<!--
 
-<div class="border0 green2_bg top5">
-            <div class="narr-counter green2">6/6</div>
+<div class="border0 green2_bg" id="map">
+        <div class="narr-counter green2">5/5</div>
         <h1 class="projectname">Map</h1>
+        <span class="narr-projecttext green1"><b>Plot:</b> Participatory planning for the human environment</span>
 </div>
 <div class="green2_border">
 Plot
 </div>
+-->
