--- a/resume.html
+++ b/resume.html
@@ -10,9 +10,6 @@ layout: stanford
     <a href="http://patrick.thedotank.org" class="projecttype l left2"><span>patrick.thedotank.org</span></a>
 </div>
 -->
-1. jazz up descriptions: methods, relation to teaching, water
-2. add links
-
 <!-- C U R R E N T L Y  -->
 
 <section class="rezfull rezgrid_2h">
@@ -38,7 +35,9 @@ layout: stanford
         Chicago
         </div>
         <div class="reztext">
-        AXD is a practice within IA integrating design thinking and architecture to innovate user-centered experiences that define the future of the human environment. With global clients, we focus on urban futures, typology innovation, and interactive environmental experiences. I bring spatial ethnography perspectives to client work, and drive AXD business development.
+        I contribute across our portfolio as a polydisciplinary designer and strategist. My primary focus is leading our architectural and human environments group: AXD, integrating design thinking and architecture to innovate user-centered experiences that define the future of the human environment. With global clients, we focus on urban futures, typology innovation, and interactive environmental experiences. I bring spatial ethnography perspectives to client work, and drive AXD business development.
+        <br>
+        Projects range from designing an alternative to doorstep parcel delivery, digital tools for againg in place, enterprise scale design language for digital channels, the <a href="http://kelvinroaster.com/" class="l">Kelvin Roaster</a>— my successful pitch for IA's first ventures project — and urban strategy in Mumbai. 
         </div>
     </div>
 </section>
@@ -77,7 +76,7 @@ A shared workspace of designers, writers, researchers, artists, activists, filmm
         Co-Founder, Product Designer
         </div>
         <div class="reztext">
-        Plot is an urban innovation platform to map ideas for place-based change and connect users to implement good ideas. As the primary strategist and interface designer, I oversee product and web development, with additional roles in partnership outreach, community engagement, business strategy, and brand. Plot dropped me head first into full stack app development. Currently in development; but here's a works-like prototype: [link]
+        Plot is an urban innovation platform to map ideas for place-based change and connect users to implement good ideas. As the primary strategist and interface designer, I oversee product and web development, with additional roles in partnership outreach, community engagement, business strategy, and brand. Plot dropped me head first into full stack app development. Plot is currently in development, but here is basic works-like prototype: <a href="http://motorway.mx/clients/plot/site/" class="l">Plot</a>
         </div>
     </div>
 </section>
@@ -237,7 +236,7 @@ Completed original design, development, detailing, model building and CNC protot
 
 <!--RIPPLE EFFECT--><section class="rezfull rezgrid_2h">    
     <div class="rezyear">
-    14 &lt;
+    14-15;
     </div>
     
     <div class="right10">
@@ -248,7 +247,7 @@ Completed original design, development, detailing, model building and CNC protot
         Co-Director of Curriculum
         </div>
         <div class="reztext">
-Ripple Effect prepares our youngest citizens to be tomorrow’s environmental leaders by redefining environmental education through place-based teaching, learning, research, and design. As co-director of curriculum, I collaborated with teachers to develop project-based lesson plans that use design thinking to teach students about water issues in New Orleans.
+Ripple Effect prepares New Orleans' youngest citizens to be environmental leaders by redefining environmental education through place-based teaching, learning, research, and design. As co-director of curriculum, I collaborated with teachers to develop project-based lesson plans that use design thinking to teach students about water issues in New Orleans while meeting state science standards. <a href="http://rippleeffectnola.com">rippleeffectnola.com</a>
         </div>
     </div>
 </section>
@@ -327,7 +326,8 @@ Managed and facilitated the work activities of 10 AmeriCorps NCCC volunteers on 
         The Body of the Screen
         </div>
         <div class="reztext">
-Article
+Interaction, user experience, and interface designers love showing screens in axonometric projection (in “perspective”). But why?
+            <a href="https://bit.ly/2EsQGNf">Read it</a> on Medium.
         </div>
     </div>
 </section>
@@ -342,10 +342,10 @@ Article
         Chicago Ideas Week
         </div>
         <div class="rezposition">
-        The Future of Place
+        Lab: The Future of Place
         </div>
         <div class="reztext">
-Stuff here about this.
+Workshop with 50+ participants. "The way we think about designing places and spaces is changing, going far beyond bricks and mortar to build experiences that anticipate future human behavior. In this Lab, attendees will explore tensions between the built environment and rapidly shifting consumer expectations: tensions between cars and mobility; hospitals and health; homes and living; and cities and communities. You'll learn the design and innovation process firsthand as you imagine and create new experiences that could revolutionize how we think about architecture and buildings, and impact the way we live for generations to come."
         </div>
     </div>
 </section>
@@ -363,7 +363,7 @@ Stuff here about this.
         Global SME
         </div>
         <div class="reztext">
-Stuff here about this.
+Member of a select group of SME and thought leaders to advise the XPRIZE Foundation on the development of the XPRIZE for Housing. Prize launch is anticipated for 2018. 
         </div>
     </div>
 </section>
@@ -378,10 +378,10 @@ Stuff here about this.
         The Wilderness of Ordinary Places
         </div>
         <div class="rezposition">
-        PLOT Journal
+        PLAT Journal
         </div>
         <div class="reztext">
-Article
+        A look at unplaces through the lens of the camera and Heidegger's phenomenological ontology. Read it <a href="{{site.baseurl}}/docs/Patrick_Jones_PLAT_The Wilderness of Ordinary Places.pdf">here.</a>
         </div>
     </div>
 </section>
@@ -396,7 +396,7 @@ Article
         Mass Rarity
         </div>
         <div class="reztext">
-Article
+Mass rarity is the effect of widely-accessible craft and bespoke experiences that feel unique, appealing to high design, personalization, and a concern for cultural substance. <a href="https://medium.com/@Patrick_S_Jones/mass-rarity-ebe740d1cb31">Read it</a> on Medium.
         </div>
     </div>
 </section>
