Narrative intro text changes

--- a/narrative.html
+++ b/narrative.html
@@ -18,14 +18,13 @@ layout: stanford
     <div class="full">
         <div class="narr-projectheadline blue1"><span class="strike">Messy Margins</span>&nbsp;&nbsp;The Human Environment</div><br><br>
         <div class="projecttext">
-        As a designer with a background in architecture, my fascination lies at the coastline, the margin where the sea and its mythic vastness meets the world as we've built it. The seas are coming for us, and we will have to invent new ways to live. Coastlines are the site of that tension, but also that generative chaos. etc. etc. <br>
+        As a designer with a background in architecture, my fascination lies at the coastline, the zone where the sea and its mythic vastness meets the world as we've built it. As we change the sea, the sea will change us. Coastlines are the front line of that tension, and along this margin we will have to envision and create new ways of living with water. From this generative chaos will come new forms of buildings, community, and interaction with the forces of nature that will permanently transfigure the human environment. <br><br>
             <a href="#water">Preamble: Water</a><br>
             <!--<a href="#wetlands">2. Wetlands</a><br>
             <a href="#delta">3. Delta</a><br>
             <a href="#place">4. Place</a><br>
             <a href="#paradise">5. Paradise</a><br>
             <a href="#map">6. Map</a><br>-->
-            <br>
             ↓
         </div>
     </div>
