--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,9 @@ layout: stanford
 
 <section class="full">
         <div class="projecttext">
-        A simple portfolio of recent work can be downloaded <a href="{{site.baseurl}}/docs/Patrick_Stowe_Jones-Work_small.pdf">Here</a>.
+        A simple portfolio of recent work can be downloaded <a href="{{site.baseurl}}/docs/Patrick_Stowe_Jones-Work_small.pdf">here</a>.
         <br>
-        <br>Please note that most of my work at IA Collaborative is bound by confidentiality.
+        <br>Please note that my most recent work at IA Collaborative is bound by confidentiality.
             <br>However, additional materials are available by direct request.
         <br>
         <br>
