--- a/resume.html
+++ b/resume.html
@@ -35,9 +35,10 @@ layout: stanford
         Chicago
         </div>
         <div class="reztext">
-        I contribute across our portfolio as a polydisciplinary designer and strategist. My primary focus is leading our architectural and human environments group: AXD, integrating design thinking and architecture to innovate user-centered experiences that define the future of the human environment. With global clients, we focus on urban futures, typology innovation, and interactive environmental experiences. I bring spatial ethnography perspectives to client work, and drive AXD business development.
-        <br>
-        Projects range from designing an alternative to doorstep parcel delivery, digital tools for againg in place, enterprise scale design language for digital channels, the <a href="http://kelvinroaster.com/" class="l">Kelvin Roaster</a>— my successful pitch for IA's first ventures project — and urban strategy in Mumbai. 
+        IA Collaborative is a global design and innovation consultancy. We use ethnographic research and design thinking to create products, services, and experiences that solve human challenges and create value.<br><br>
+        I contribute across our portfolio as a polydisciplinary designer and strategist, with key roles in interaction and environments design. I lead IA Collaborative's architectural and human environments group (AXD), which integrates design thinking and architecture to innovate user-centered experiences that define the future of the built world. With global clients, we focus on urban futures, typology innovation, and interactive environmental experiences. I bring spatial ethnography perspectives to client work, and drive AXD business development.
+        <br><br>
+        Projects range from designing an alternative to doorstep parcel delivery, digital tools for againg in place, enterprise scale design language for digital channels, urban futures strategy in Mumbai, and the <a href="http://kelvinroaster.com/" class="l">Kelvin Roaster</a>— my successful pitch for IA's first ventures project.
         </div>
     </div>
 </section>
@@ -76,7 +77,7 @@ A shared workspace of designers, writers, researchers, artists, activists, filmm
         Co-Founder, Product Designer
         </div>
         <div class="reztext">
-        Plot is an urban innovation platform to map ideas for place-based change and connect users to implement good ideas. As the primary strategist and interface designer, I oversee product and web development, with additional roles in partnership outreach, community engagement, business strategy, and brand. Plot dropped me head first into full stack app development. Plot is currently in development, but here is basic works-like prototype: <a href="http://motorway.mx/clients/plot/site/" class="l">Plot</a>
+        Plot is an urban innovation platform to map ideas for place-based change and connect organizations to their members to take action. As the primary strategist and interface designer, I oversee product and web development, with additional roles in partnership outreach, community engagement, business strategy, and brand. Plot dropped me head first into full stack app development. The new platform is currently in development, but here is an unadorned works-like prototype: <a href="http://motorway.mx/clients/plot/site/" class="l">Plot</a>
         </div>
     </div>
 </section>
