--- a/narrative.html
+++ b/narrative.html
@@ -222,7 +222,7 @@ layout: stanford
     
 <!--Closing-->
     <div class="hide top5">
-        <img src="{{site.baseurl}}/img/water/water36.jpg" class="op80">
+        <img src="{{site.baseurl}}/img/water/water36.png" class="op80">
         <span class="captionbox projectcaption">This is the site</span>
     </div>
     
