--- a/narrative.html
+++ b/narrative.html
@@ -30,22 +30,22 @@ layout: stanford
     </div>
 </section>
 
+<div class="t0">&nbsp;</div>
 
 <!-- Water Story -->
 
-<div class="border0 blue1_bg top5" id="water">
+<div class="border0 blue1_bg" id="water">
         <div class="narr-counter blue1">Preamble</div>
         <h1 class="narr-projectname">Water</h1>
         <span class="narr-projecttext blue1"><b>The coastline</b> has informed my worldview as a designer in ways that surprise even me.</span>
 </div>
-    <div class="hide">
+
+<div class="hide">
 			<img src="{{site.baseurl}}/img/water/water13.png" class="op80">
 			<span class="captionbox projectcaption">
 			Lake Michigan
 			</span>
 		</div>    
-
-
 
 <div class="blue1_border">
     
@@ -119,7 +119,7 @@ layout: stanford
 		<div class="hide">
 			<img src="{{site.baseurl}}/img/water/water24.png" class="op80">
 			<span class="captionbox projectcaption">
-			The intersection of deltaic marhses, the sea, and the city in New Orleans
+			The intersection of deltaic marshes, the sea, infrastructure, and the city in New Orleans
 			</span>
 		</div>
 	</div> 
@@ -237,10 +237,9 @@ layout: stanford
 <div class="border1"><center><span class="projecttext">↓</span></center></div>
 -->
 
-
 <!-- Michigan Wetlands -->
-<!--
 
+<!--
 <div class="border0 green1_bg" id="wetlands">
         <div class="narr-counter green1">1/5</div>
         <h1 class="projectname">Wetlands</h1>
@@ -249,41 +248,50 @@ layout: stanford
 <div class="green1_border">
 Michigan!
 </div>
-
-<div class="border1"><center><span class="projecttext">↓</span></center></div>
 -->
 
 
-<!-- Changing Course & Ripple Effect -->
-<!--
+<!--<div class="t1">&nbsp;</div>-->
 
+
+<!-- Changing Course -->
+
+<!--
 <div class="border0 yellow1_bg" id="delta">
-        <div class="narr-counter yellow1">2/5</div>
-        <h1 class="projectname">Delta</h1>
-        <span class="narr-projecttext yellow1"><b>Changing Course:</b> The delta as protective infrastructure</span>
-</div>
+      <div class="narr-counter yellow1">2/5</div>
+      <h1 class="projectname">Delta</h1>
+      <span class="narr-projecttext yellow1"><b>Changing Course:</b> Reconstructing the delta as protective infrastructure</span>
+    </div>
+
+    <div class="hide">
+        <img src="{{site.baseurl}}/img/cc/re5b.png" class="op80">
+		<span class="captionbox projectcaption">
+		The Lake Pontchartrain levee
+		</span>
+    </div>    
+
 <div class="yellow1_border">
-Changing Course
+    Changing Course
 </div>
 
-<div class="border1"><center><span class="projecttext">↓</span></center></div>
+<div class="t2">&nbsp;</div>
 -->
 
-
-<!-- Proxy -->
+<!-- Ripple Effect -->
 <!--
-
 <div class="border0 blue2_bg" id="place">
         <div class="narr-counter blue2">3/5</div>
         <h1 class="projectname">Place</h1>
-        <span class="narr-projecttext blue2"><b>Proxy:</b> A digital platform enabling place-based experience</span>
-</div>
-<div class="blue2_border">
-Proxy
+        <span class="narr-projecttext blue2"><b>Ripple Effect:</b> water literacy in New Orleans schools through design-based experiential learning</span>
 </div>
 
-<div class="border1"><center><span class="projecttext">↓</span></center></div>
+<div class="blue2_border">
+Ripple Effect
+</div>
 -->
+
+
+<!-- Mission: Ripple Effect prepares our youngest citizens to be tomorrow’s environmental leaders by redefining environmental education through place-based teaching, learning, research, and design.--> 
 
 <!-- Against Exile -->
 <!--
@@ -311,4 +319,18 @@ Against Exile
 <div class="green2_border">
 Plot
 </div>
+-->
+
+<!-- Proxy -->
+<!--
+<div class="border0 blue2_bg" id="place">
+        <div class="narr-counter blue2">3/5</div>
+        <h1 class="projectname">Place</h1>
+        <span class="narr-projecttext blue2"><b>Proxy:</b> A digital platform enabling place-based experience</span>
+</div>
+<div class="blue2_border">
+Proxy
+</div>
+
+<div class="border1"><center><span class="projecttext">↓</span></center></div>
 -->
