--- a/narrative.html
+++ b/narrative.html
@@ -192,7 +192,7 @@ layout: stanford
         <div class="grid grid_2h top5">
             <div class="hide">
                 <img src="{{site.baseurl}}/img/water/water33.png" class="op80">
-                <span class="captionbox projectcaption">Connecting with water a is part of ritual</span>
+                <span class="captionbox projectcaption">Connecting with water is a part of ritual</span>
             </div>
                 <div class="border0 blue1_bg">
                 <span class="narr-projecttext blue1">In myth, the bayou is a place of outlaw, but also redemption. On Mardi Gras day in New Orleans, revelers go down to the bank of the Mississippi River to spread ashes and give blessings for the dead. Invoking their names, streamers are dipped into the river, and the wind blows water over those gathered.</span>
@@ -324,7 +324,7 @@ Michigan!
         <!-- OBJECTIVES -->
         <div class="grid grid_2h top5">
             <div class="narr-projecttext yellow1 left5">
-            The project's multiscalar and transdisciplinary approach to a resilient delta addresses primary six objectives.
+            The project's multiscalar and transdisciplinary approach to a resilient delta addresses six primary objectives.
             </div>
             <div>
                 <img src="{{site.baseurl}}/img/cc/objectives_2018.png">
@@ -353,13 +353,14 @@ Michigan!
             <div class="gray_bg border0 bottborder">
                 <span class="narr-projectheadline yellow1 uline">Sediment</span><br><br>
                 <div class="projecttext yellow1">
-                At the end of the day, this is a simple problem: sediment carried by the river from the drainage basin of the continent is shooting off the continental shelf instead of building marsh. 
+                We have a simple need: to capture the sediment the Mississippi carries to Louisiana rather than losing it to the sea. 
+                <br><br>Sediment diversions siphon material as it gathers in the river channel and distributes it through pipes and secondary channels to marsh-depleted areas. It is a rough but fast simulation of what the river would do naturally as result of flooding. Sediment is future land, and installing diversions along the channel south of English Turn is a first step towards physically reconstructing stable land. 
                 </div>
             </div>
             <div class="hide">
                 <img src="{{site.baseurl}}/img/cc/sediment_2018b.png">
                 <span class="captionbox projectcaption">
-                Sediment
+                Sediment diversions can quickly build new land
                 </span>
             </div>
         </div>
@@ -377,7 +378,7 @@ Michigan!
             <div class="gray_bg border0 bottborder">
                 <span class="narr-projectheadline yellow1 uline">Ecosystems</span><br><br>
                 <div class="projecttext yellow1">
-                New ground means there's a place for plants to take root and, consequently, for resilient ecosystems to recover. These ecosystems strengthen the capacity for the marsh to act as a barrier to destructive storm surges. Without a diversity of healthy ecosystems, the marsh will always be vulnerable to the forces of nature. 
+                New ground means there's a place for plants to take root and, consequently, for resilient ecosystems to recover. If healthy, these ecosystems strengthen the capacity for the marsh to act as a barrier against destructive storm surges by providing a range of plant species suitable to different conditions, such as water salinity and soil density. Without this diversity of healthy ecosystems, the marsh will be vulnerable to powerful climate events like hurricanes. 
                 </div>
             </div>
         </div>
@@ -389,7 +390,7 @@ Michigan!
             <div class="gray_bg border0 bottborder">
                 <span class="narr-projectheadline yellow1 uline">Community & Industry</span><br><br>
                 <div class="projecttext yellow1">
-                Community and industry both have valid stakes. But we need to be smart. 
+                Without systemically rethinking river controls, communities have limited hope to remain viable, let alone grounded and dry. At this point, communities need a healthy delta to keep living. Perversely, without the value attached to the existence and heritage of communities througout the delta, complacency and ambivalence might pose a greater threat instead.<br><br>There are good reasons to design environmental systems that allow communities and industrial sites to coexist with this fragile landscape, and mitigate — and in many cases, reverse - the threat that industry has posed to the delta in previous decades. 
                 </div>
             </div>
             <div class="hide">
