--- a/narrative.html
+++ b/narrative.html
@@ -414,7 +414,7 @@ Michigan!
             <div class="gray_bg border0 bottborder">
                 <span class="narr-projectheadline yellow1 uline">Flooding</span><br><br>
                 <div class="projecttext yellow1">
-                That means making a compromise between where we build and where we don't, and designing new forms of porous infrastructure that allow the river to do what it wants to do.
+                That means making a compromise between where we build and where we don't, and designing new forms of porous infrastructure that allow the river to behave as it would without human intervention. 
                 </div>
             </div>
         </div>
