Added Ripple Effect and changed page names

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 layout: stanford
 ---
 
-<h1 class="projectname left5 top5">Work</h1>
+<h1 class="projectname left5 top5">Portfolio</h1>
 
 <section class="full">
         <div class="projecttext">
