--- a/narrative.html
+++ b/narrative.html
@@ -578,6 +578,9 @@ layout: stanford
         <div class="border3 gray_bg">
             <div class="projecttext blue2">
             As one part of the project, students made their own maps of the playground courtyard. Many students developed their own systems for documenting different aspects of the experience such as where water pooled, where they liked to spend time, and what their ideas were for a better playground.
+            <br>
+            <br>
+            By the time the courtyard project was underway, I had moved to Chicago, but was thrilled to see the students get a chance to see design thinking lead to real change.
             </div>
         </div>  
     </div>
