--- a/projects/architecture/ae.html
+++ b/projects/architecture/ae.html
@@ -81,7 +81,9 @@ blurb: This was the start of it all.
 
 <div class="full">
 	<div class="projecttext">
-	This is where the answer goes.  a human centered design approach to community challenges in the area of public health and other complex dadee-da success scenario implementicks. This is where the answer goes.  a human centered design approach to community challenges in the area of public health and other complex dadee-da success scenario implementicks.
+	"No individual endows the meaning of a ruin; it is a collective measure that comes from the basic situation an individual makes upon encountering a place: here is the house; here stood the house; here my mother grew up; here I fell in love&mdash;
+        <br><br><div class="left5">here grows a forest; here the river floods; here stands the symbol of a former injustice; here the people fled; here I struggled to survive; here I had to leave</div>
+        <br>&mdash;this places is, was, will be, ought to be, may be, has been, would have been, will have been, had never been, and should have never been."
 	</div>
 </div>
 
