About page added

--- a/projects/architecture/ae.html
+++ b/projects/architecture/ae.html
@@ -18,8 +18,9 @@ blurb: This was the start of it all.
 	</div>
 </div>
 -->
-
-<img src="{{site.baseurl}}/img/ae/ae_grid.png" class="border1 gray_bg">
+<div class="border1 gray_bg">
+<img src="{{site.baseurl}}/img/ae/ae_grid.png">
+</div>
 
 <!-- T E X T -->
 
@@ -43,7 +44,7 @@ blurb: This was the start of it all.
 		</span>
 	</div>
 
-	<div class="grid grid_2h">
+	<div class="grid grid_2h bottborder">
 		<div class="hide">
 			<img src="{{site.baseurl}}/img/ae/ae_stair.png" class="gray_bg2">
 			<span class="captionbox projectcaption">
@@ -58,7 +59,7 @@ blurb: This was the start of it all.
 		</div>
 	</div>
 
-	<div class="grid grid_3h">
+	<div class="grid grid_3h bottborder">
 		<div class="hide">
 			<img src="{{site.baseurl}}/img/ae/ae_library_view1.png">	
 			<span class="captionbox projectcaption">
