--- a/projects/architecture/re.html
+++ b/projects/architecture/re.html
@@ -36,7 +36,7 @@ year: 2014
 </div>
   
 <div class="border1 gray_bg">
-    <div class="grid grid_2h">
+    <div class="grid grid_2h bottborder">
         <div class="hide">
             <img src="{{site.baseurl}}/img/re/re7.png" class="op80">
             <span class="captionbox projectcaption">Teachers and designers at a workshop</span>
@@ -72,7 +72,7 @@ year: 2014
 
 
 <div class="border1 gray_bg">
-    <div class="grid grid_2h">
+    <div class="grid grid_2h bottborder">
         <div class="hide">
             <img src="{{site.baseurl}}/img/re/re28.png" class="op80">
             <span class="captionbox projectcaption">Getting creative about modeling the water cycle</span>
